Config server added note: configuration is not working

--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/eureka_test
 spring.application.name=uereka-test-client
+spring.cloud.config.uri=http://localhost:8888
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 server.port=8083
