--- a/eureka-api-gateway/src/main/resources/application.properties
+++ b/eureka-api-gateway/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+spring.cloud.config.uri=http://localhost:8888
 
 # A prefix that can added to beginning of all requests.
 #zuul.prefix=/api
