--- a/eureka-config-server/src/main/resources/application.properties
+++ b/eureka-config-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=configserver
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/OleksievetsO/eureka
+spring.cloud.config.server.git.username=OleksievetsO
+spring.cloud.config.server.git.password=E1psycongroo
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
