--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -84,7 +84,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
